changed div size to prevent overlap, this enables the gaplength slider to be used on mobile, and changed play button's functionality to affect the spinner i made. And removed the complete button. lines are commented out

--- a/experimental/spinner.css
+++ b/experimental/spinner.css
@@ -32,11 +32,11 @@ body {
 .static {
     z-index: 1;
     position: absolute;
-    top: 20%;
-    left: 20%;
+    top: 50%;
+    left: 50%;
     margin: -15px 0 0 -15px;
-    width: 300px;
-    height: 300px;
+    width: 110px;
+    height: 110px;
     animation: rotate 2s linear infinite;
 }
 
@@ -65,10 +65,6 @@ body {
     stroke-dasharray: 50;
     stroke-dashoffset: 50;
     animation: draw 2s forwards;
-}
-
-#gaplength {
-    touch-action: manipulation;
 }
 
 /* Define the gap variable */
